--- a/meta.yaml
+++ b/meta.yaml
@@ -6,4 +6,8 @@ source:
    git_url: https://github.com/Areustle/fermi-heacore.git
 
 build:
-number: 0
+  number: 0
+
+requirements:
+  build:
+    - readline
