--- a/heacore/ape/Makefile
+++ b/heacore/ape/Makefile
@@ -1,10 +1,10 @@
 HD_COMPONENT_NAME		= heacore
 
-HD_COMPONENT_VERS		= 
+HD_COMPONENT_VERS		=
 
 HD_SUBDIRS			= include/ape src src/pcheck src/pget src/plist src/pquery src/pquery2 src/pset src/punlearn
 
-HD_INSTALL_HEADERS		= include/pil.h include/pil_error.h
+HD_INSTALL_HEADERS		= include/pil.h include/pil_error.h include/cfortran.h
 
 HD_TEST_SUBDIRS			= src/test
 
