--- a/meta.yaml
+++ b/meta.yaml
@@ -10,8 +10,8 @@ build:
 
 requirements:
   build:
-    - readline=6.2-0
+    - readline <=6.2-0
     - cfitsio
   run:
-    - readline=6.2-0
+    - readline <=6.2-0
     - cfitsio
